--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="container">
       <div class="profile">
-        <img src="/assets/images/avatar-jessica.jpeg" alt="">
+        <img src="assets/images/avatar-jessica.jpeg" alt="profile pic">
       </div>
       <div class="details">
         <h3>Jessica Randall</h3>
